# -tesla-dash-cam-viewer

./: .gitignore  README.md  app.js  index.html  package-lock.json  package.json  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
