[package]
name = "tesla_dashcam_viewer"
version = "0.1.0"
description = "Offline Tesla dashcam viewer"
authors = ["summe"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
